# JD-to-Resume-Matching-API

./: .gitignore  index.html  main.py  main_with_error_handling.py  pyproject.toml  run_benchmark.py  text_extraction_engine.py  text_processing_engine.py  utils.py
.agents/skills/auto-commit/: SKILL.md
benchmark/: __init__.py  metrics.py  report_writer.py  runner.py  scorers.py
benchmark_results/: accuracy_report.txt  metrics_summary.xlsx  raw_scores.xlsx
datasets/: dataset.xlsx  dataset_imputed.xlsx
job_descriptions/: Training Software Developers JD.docx  Training Software Developers JD.txt  abc.txt
job_descriptions/JD/: JD.txt
job_descriptions/jd_1/: jd_1.txt
services/: matching_service.py  text_extraction_engine.py  text_processing_engine.py  tfidf_vectorizer.py
uis/: index.html  index_2.html
