[project]
name = "jd-to-resume-matching-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Meshkat Uddin Ahammed",email = "meshkatuddinahamed@outlook.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pdfplumber (>=0.11.10,<0.12.0)",
    "pypdf (>=6.14.2,<7.0.0)",
    "nltk (>=3.9.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
